[package]
name = "hardback"
version = "0.2.0"
authors = ["Allan Saddi <allan@saddi.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
once_cell = "1.13.0"
sha2 = "0.10"
