[package]
name = "hardback"
version = "0.2.3"
authors = ["Allan Saddi <allan@saddi.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
sha2 = "0.10"
snafu = "0.9.0"
